--- a/app/boards/arm/bluemicro832/bluemicro832.dts
+++ b/app/boards/arm/bluemicro832/bluemicro832.dts
@@ -21,6 +21,13 @@
 		zephyr,flash = &flash0;
 	};
 
+	vbatt {
+		compatible = "zmk,battery-voltage-divider";
+		label = "BATTERY";
+		io-channels = <&adc 2>;
+		output-ohms = <2000000>;
+		full-ohms = <(2000000 + 806000)>;
+	};
 };
 
 &gpio0 {
